--- a/config.toml
+++ b/config.toml
@@ -10,5 +10,10 @@
   				["humiditydeficit","g/㎥","gen_sender","gen_saver"]]
 
 [imaging]
+# data [[イメージ種別、デバイス数、送信、保存],...]
+# イメージ種別 = [ "pic" | "movie" ]
+# デバイス数 = [ "one" | "all"]
+
 	[imaging.uvc]
-	data =["pic","one","gen_pic_sender", "gen_pic_saver"]
+#	data =["pic","one","gen_pic_sender", "gen_pic_saver"]
+	data =["pic","all","gen_pic_sender", "gen_pic_saver"]
