--- a/clock_note.ini
+++ b/clock_note.ini
@@ -1,8 +1,9 @@
-[lcd]
-i2c_addr=0x3f
-
 [data]
-temp_path=/media/usb0
-humidity_path=/media/usb0
-humiditydeficit_path=/media/usb0
-CO2_path=/media/usb0
+#temp_path=/media/usb0
+temp_path=/boot/DATA
+#humidity_path=/media/usb0
+humidity_path=/boot/DATA
+#humiditydeficit_path=/media/usb0
+humiditydeficit_path=/boot/DATA
+#CO2_path=/media/usb0
+CO2_path=
