add monitor mode on ini file.

--- a/gen_sender.ini
+++ b/gen_sender.ini
@@ -1,14 +1,22 @@
 [send]
 potocol=http
 potocol_old=mqtt
+
 [server]
 url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
 url_base_gal4=https://klingsor.uedasoft.com/tools/151108/
-url_base=https://klingsor.uedasoft.com/tools/160613/gal4_server/
+url_base_klingsor=https://klingsor.uedasoft.com/tools/160613/gal4_server/
 url_base_c9=https://gal5-ueda.c9users.io/
+url_base=http://localhost/SCRIPT/monitor/
+
 [mqtt]
 host=klingsor.uedasoft.com
 topic=gal/gal4/
 id_base=ueda-
+
 [log]
 log_file=/home/pi/LOG/gen_sender.log
+
+[monitor]
+mode=public
+mode_private=private
