fix typo: potocol.

--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,8 @@ log_sd=sd
 send_data=easymonitor
 duration=30
 [send]
-potocol=http
-potocol_old=mqtt
+protocol=http
+protocol_old=mqtt
 [server]
 url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
 url_base_gal4=https://klingsor.uedasoft.com/tools/151108/
