--- a/gen_sender.ini
+++ b/gen_sender.ini
@@ -1,6 +1,6 @@
 [send]
-potocol=http
-potocol_old=mqtt
+protocol=http
+protocol_old=mqtt
 
 [server]
 url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
