--- a/gen_sender.ini
+++ b/gen_sender.ini
@@ -1,13 +1,13 @@
 [send]
 protocol=http
-protocol_old=mqtt
+#protocol=mqtt
 
 [server]
-url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
-url_base_gal4=https://klingsor.uedasoft.com/tools/151108/
-url_base_klingsor=https://klingsor.uedasoft.com/tools/160613/gal4_server/
-url_base_c9=https://gal5-ueda.c9users.io/
-url_base=http://localhost/SCRIPT/monitor/
+##url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
+##url_base_gal4=https://klingsor.uedasoft.com/tools/151108/
+##url_base_c9=https://gal5-ueda.c9users.io/
+url_base=https://klingsor.uedasoft.com/tools/160613/gal4_server/
+#url_base=http://localhost/SCRIPT/monitor/
 
 [mqtt]
 host=klingsor.uedasoft.com
@@ -18,5 +18,5 @@ id_base=ueda-
 log_file=/home/pi/LOG/gen_sender.log
 
 [monitor]
-mode=public
-mode_private=private
+#mode=public
+mode=private
