--- a/gen_pic_sender.ini
+++ b/gen_pic_sender.ini
@@ -3,10 +3,10 @@ protocol=http
 protocol_old=mqtt
 
 [server]
-url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
-url_base_gal4=https://klingsor.uedasoft.com/tools/151108/
-url_base_klingsor=https://klingsor.uedasoft.com/tools/160613/gal4_server/
-url_base=http://localhost/SCRIPT/monitor/
+##url_base_gal3=https://klingsor.uedasoft.com/tools/151001/
+##url_base_gal4=https://klingsor.uedasoft.com/tools/151108/
+url_base=https://klingsor.uedasoft.com/tools/160613/gal4_server/
+#url_base=http://localhost/SCRIPT/monitor/
 
 [mqtt]
 host=klingsor.uedasoft.com
@@ -17,5 +17,5 @@ id_base=ueda-
 log_file=/home/pi/LOG/gen_sender.log
 
 [monitor]
-mode=public
-mode_private=private
+#mode=public
+mode=private
